assets/style.css
.background-blur {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: blur(2px);
    -webkit-filter: blur(2px);
    transform: scale(1.1);
}

.loaded-fade-in {
    opacity: 0;
    transition: all 2s ease;
}

.fullheight {
    height: 100vh
}

.bi {
    transition: transform 10ms ease-in-out;
}

.bi:hover {
    transform: scale(1.05);
}

body {
    overflow-x: hidden;
}

.text-shadow {
    text-shadow: 2px 2px 8px black;
}

.big-text-shadow {
    text-shadow: 2px 2px 3px black;
}

@media (min-width: 700px) {
    .w-md-50 {
        width: 50% !important;
    }

    .w-md-25 {
        width: 25% !important;
    }

    body {
    overflow: hidden;
    }
}

.backdrop-blur {
    backdrop-filter: blur(2px);
}

@media (max-width: 768px) {
    .w-sm-50 {
        width: 50% !important;
    }
}

